k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: img2webp-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |+
      rewrite ^/api/(.*)$ /$1 break;
spec:
  rules:
    - host: webp.masterjoy.top
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: img2webp-nginx
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: img2webp-admin
                port:
                  number: 8861

---
apiVersion: v1
kind: Service
metadata:
  name: img2webp-nginx
spec:
  selector:
    app: img2webp-nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: img2webp-admin
spec:
  selector:
    app: img2webp-admin
  ports:
    - port: 8861
      targetPort: 8861
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: img2webp-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: img2webp-nginx
  template:
    metadata:
      name: img2webp-nginx
      labels:
        app: img2webp-nginx
    spec:
      imagePullSecrets:
        - name: private-docker
      containers:
        - name: img2webp-nginx
          image: registry.cn-hangzhou.aliyuncs.com/tanwuyang/img2webp-home:v2021_05_12_09_34
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: nginx-config
      volumes:
        - name: nginx-config
          configMap:
            name: img2webp-nginx-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: img2webp-admin
spec:
  selector:
    matchLabels:
      app: img2webp-admin
  template:
    metadata:
      name: img2webp-admin
      labels:
        app: img2webp-admin
    spec:
      imagePullSecrets:
        - name: private-docker
      containers:
        - name: img2webp
          image: registry.cn-hangzhou.aliyuncs.com/tanwuyang/img2webp-admin:v2021_05_12_09_17
          ports:
            - containerPort: 8861
          volumeMounts:
            - mountPath: /img2webp/webp_zip
              name: alicloud-nas
      volumes:
        - name: alicloud-nas
          flexVolume:
            driver: alicloud/nas
            options:
              server: id-shenzhen.nas.aliyuncs.com
              path: /img2webp
              vers: "3"
              options: nolock,tcp,noresvport
